<resources>
    <string name="app_name">菌菌</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="phone$email">手机/邮箱</string>
    <string name="password">密码</string>
    <string name="reset_password">重置密码？</string>
    <string name="register">注册</string>
    <string name="other_login_way">其他登录方式</string>
    <string name="get_identifyCode">获取验证码</string>
    <string name="register_means_you_agree">注册代表你已阅读并同意</string>
    <string name="MrCampusAgreement">《菌菌协议》</string>
    <string name="nickName">昵称</string>
    <string name="identiftCode">验证码</string>
    <string name="getIdentifyCode">获取验证码</string>
    <string name="chooseFromAlbus">从相册选择</string>
    <string name="Camera">相机</string>
    <string name="submit">提交</string>
    <string name="new_password">新密码</string>
    <string name="resetPassword">重置密码</string>
    <string name="_3">3</string>
    <string name="unLogin">未登录</string>
    <string name="Attention">关注</string>
    <string name="_0">0</string>
    <string name="Fans">粉丝</string>
    <string name="Visitors">访客</string>
    <string name="residence">驻扎</string>
    <string name="loadingAddress">正在获取地址...</string>
    <string name="myLike">我的喜欢</string>
    <string name="personDynamic">个人动态</string>
    <string name="article">文章</string>
    <string name="topic">话题</string>
    <string name="normal">普通</string>
    <string name="circle">圈子</string>
    <string name="attention">关注</string>
    <string name="Phone">手机</string>
    <string name="Email">邮箱</string>
    <string name="ID">ID</string>
    <string name="register_time">注册时间</string>
    <string name="headImg">头像</string>
    <string name="NickName">昵称</string>
    <string name="Approve">认证</string>
    <string name="Sex">性别</string>
    <string name="Name">名称</string>
    <string name="bref_introduction">简介</string>
    <string name="Background">背景</string>
    <string name="Man">男</string>
    <string name="Female">女</string>
    <string name="Zero">0</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="shareTo">分享到</string>
    <string name="point_circle">●</string>
    <string name="commentCount_jiantou">条评论➷</string>
    <string name="view_all">查看全部</string>
    <string name="Your_comment_will_be_more_motivated_author">您的评论会让作者更有动力</string>
    <string name="view_order_desc">倒序浏览</string>
    <string name="view_order_asc">正序浏览</string>
    <string name="hot_comment">热门评论</string>
    <string name="Author">作者：</string>
    <string name="View_all">查看全部</string>
    <string name="click_add_picture">点击添加图片</string>
    <string name="post_topic">发布话题</string>
    <string name="background">背景</string>
    <string name="circleName">圈子名称</string>
    <string name="person_subject">个人专题</string>
    <string name="confession">表白墙</string>
    <string name="taunted">吐槽墙</string>
    <string name="lostAndFound">失物招领</string>
    <string name="fleaMarket">跳蚤市场</string>
    <string name="wantedSavant">求学霸</string>
    <string name="wantedPartner">寻水友</string>
</resources>
