<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_style_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_w_b_round"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_user" />

            <EditText
                android:id="@+id/fer_et_identifyCode"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/identiftCode"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_input_user" />

            <EditText
                android:id="@+id/fer_et_passWord"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fer_bt_commit"
        style="@style/buttonGeneralStyle"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/bt_bg_selecter_5"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>