<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_style_1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fep_bt_headImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/general_item_selector"
        android:src="@drawable/ic_user_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_w_b_round"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_user" />

            <EditText
                android:id="@+id/fep_et_identifyCode"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/identiftCode"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_user" />

            <EditText
                android:id="@+id/fep_et_nickName"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/nickName"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_input_user" />

            <EditText
                android:id="@+id/fep_et_passWord"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fel_bt_login"
        style="@style/buttonGeneralStyle"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/bt_bg_selecter_5"
        android:text="@string/register"
        android:textColor="@color/white" />

</LinearLayout>
