<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_style_1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/logo_email" />

        <EditText
            android:id="@+id/fei_et_input"
            style="@style/inputEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/clarity"
            android:hint="@string/phone$email"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />

    <Button
        android:id="@+id/fei_bt_send"
        style="@style/buttonGeneralStyle"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/bt_bg_selecter_5"
        android:text="@string/get_identifyCode"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/fei_ll_countCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="获取时间：" />

        <TextView
            android:id="@+id/fei_tv_sendCodeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60"
            android:textColor="@color/main_theme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="秒" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_means_you_agree"
            android:textColor="@color/line" />

        <TextView
            android:id="@+id/fei_bt_MrcampusAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MrCampusAgreement"
            android:textColor="@color/main_theme" />
    </LinearLayout>

</LinearLayout>
