<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include layout="@layout/title_style_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/fel_et_userName"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/phone$email"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/logo_input_user" />

            <EditText
                android:id="@+id/fel_et_passWord"
                style="@style/inputEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clarity"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />

        <TextView
            android:id="@+id/fel_tv_resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/fel_bt_login"
                style="@style/buttonGeneralStyle"
                android:layout_width="match_parent"
                android:background="@drawable/bt_bg_selecter_5"
                android:text="@string/login"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/fel_bt_register"
                style="@style/buttonGeneralStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_bg_selecter_4"
                android:text="@string/register"
                android:textColor="@color/line" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.1dp"
                    android:layout_weight="1"
                    android:background="@color/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_login_way"
                    android:textColor="@color/line" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.1dp"
                    android:layout_weight="1"
                    android:background="@color/line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/fel_loginByWeiBo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/weibo" />

                <ImageView
                    android:id="@+id/fel_loginByWeChat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/weixin" />

                <ImageView
                    android:id="@+id/fel_loginByQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/qie" />

                <ImageView
                    android:id="@+id/fel_loginByDouBan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/douban" />

                <ImageView
                    android:id="@+id/fel_loginByRenRen"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/renren" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>