<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme_gravy"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fmc_ll_watched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Watched"
                android:textColor="@color/line"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/fmc_tv_watchedNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/fmc_ll_fans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Fans"
                android:textColor="@color/line"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/fmc_tv_fansNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/fmc_ll_visitors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Visitors"
                android:textColor="@color/line"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/fmc_tv_visitorsNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line_deep" />

    <android.support.design.widget.TabLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fmc_tab"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/clarity"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="2.5dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/tab_appearance"
        app:tabTextColor="@color/line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line_deep" />

    <android.support.v4.view.ViewPager
        android:id="@+id/fmc_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1" />

</LinearLayout>
